# BooShelf-API

./: CMakeLists.txt  README.md  config.json  crow_all.h  main.cpp
access-rights/: GuestVisitor.cpp  GuestVisitor.h  UserVisitor.cpp  UserVisitor.h  Visitor.h
exceptions/: httpExceptions.cpp  httpExceptions.h
middleware/: auth.cpp  auth.h  bodyParser.cpp  bodyParser.h  headers.cpp  headers.h
models/: book.h  review.h  tracking.h  user.h
models/validator/: validator.h
routes/authors/: authors.cpp  authors.h
routes/books/: books.cpp  books.h
routes/reviews/: reviews.cpp  reviews.h
routes/trackings/: trackings.cpp  trackings.h
routes/users/: users.cpp  users.h
tools/: auth.cpp  auth.h  token.cpp  token.h
